Fixed text wrap

--- a/CustomsConsultancy.Web/src/components/Home/Home.css
+++ b/CustomsConsultancy.Web/src/components/Home/Home.css
@@ -12,8 +12,8 @@
    align-self: center;
    border: 2px solid white;
    width: 40rem;
-   word-break: break-all;
-   margin-left: 6rem;   
+   margin-left: 6rem;
+   text-wrap: balance;
 }
 
 .blue-text {
